@@ -1,5 +1,14 @@
 2002-03-21  Sam Steingold  <sds@gnu.org>
 
+	more $host_cpu canonicalization (arm)
+	* makemake.in (host_cpu): handle hppa* and arm* together
+	* ffcall/autoconf/aclocal.m4 (CL_CANONICAL_HOST_CPU_FOR_FFCALL):
+	canonicalize $host_cpu=arm* to arm
+	* autoconf/aclocal.m4 (CL_CANONICAL_HOST_CPU)
+	(CL_CANONICAL_HOST_CPU_FOR_FFCALL): ditto
+
+2002-03-21  Sam Steingold  <sds@gnu.org>
+
 	* eval.d, ffcall/avcall/avcall.h.in
 	* ffcall/avcall/avcall.h.mingw32, ffcall/avcall/avcall.h.msvc
 	* ffcall/callback/vacall_r/vacall_r.h.in
